Gameboard set up and centered

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     </div>
     <div class="wrapper">
         <div class="gameArea">
-            <div class="gameSpot" id="gameSpot"></div>
-            <div class="gameSpot" id="gameSpot"></div>
-            <div class="gameSpot" id="gameSpot"></div>
-            <div class="gameSpot" id="gameSpot"></div>
-            <div class="gameSpot" id="gameSpot"></div>
-            <div class="gameSpot" id="gameSpot"></div>
-            <div class="gameSpot" id="gameSpot"></div>
-            <div class="gameSpot" id="gameSpot"></div>
-            <div class="gameSpot" id="gameSpot"></div>
+            <div class="gameSpot top left" id="gameSpot"></div>
+            <div class="gameSpot top center" id="gameSpot"></div>
+            <div class="gameSpot top right" id="gameSpot"></div>
+            <div class="gameSpot middle left" id="gameSpot"></div>
+            <div class="gameSpot middle center" id="gameSpot"></div>
+            <div class="gameSpot middle right" id="gameSpot"></div>
+            <div class="gameSpot bottom left" id="gameSpot"></div>
+            <div class="gameSpot bottom center" id="gameSpot"></div>
+            <div class="gameSpot bottom right" id="gameSpot"></div>
         </div>
     </div>
 </body>
