Create gameboard method and set basic functions

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <div class="header">
+    <div class="header" id="header">
         <h1>Tic Tac Toe</h1>
     </div>
     <div class="wrapper">
-        <div class="gameArea">
+        <div class="gameArea" id="gameArea">
             <div class="gameSpot top left" id="gameSpot"></div>
             <div class="gameSpot top center" id="gameSpot"></div>
             <div class="gameSpot top right" id="gameSpot"></div>
