Fix logic surroudning game flow

--- a/index.html
+++ b/index.html
@@ -25,5 +25,15 @@
             <div class="gameSpot bottom right" id="gameSpot"></div>
         </div>
     </div>
+    <div class="winner hidden" id="winnerBox">
+        <div class="textBox" id="textBox">
+            <h2 id="winnerMessage">X Player Wins!</h2>
+            <h4>Play Again?</h4>
+            <div class="btns">
+                <button class="yes" id="yes">Yes</button>
+                <button class="no">No</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
